Revision history for {{$dist->name}}

{{$NEXT}}

0.16      2014-08-28 23:55:47Z
  - skip Moose-related tests for normal installs, to get out of circularity
    hell if Moose is installed but broken and needing an upgrade

0.15      2014-08-16 00:18:15Z
  - bump Package::Stash prereq to ensure used methods are available

0.14      2014-08-11 21:44:34Z
  - remove accidental dependency on Class::MOP (which turned into a circular
    dependency with Moose-2.1211)

0.13      2014-06-24 19:14:03Z
  - bump (optional) prereq on Moo to get some fixes for handling roles

0.12      2014-06-18 01:58:18Z
  - also special case constant subs, which show up in the symbol table before
  perl 5.010 as 'constant::__ANON__'

0.11      2014-06-15 04:02:16Z
  - the return value of namespaces_clean() and all_namespaces_clean() is now
    consistent with the result of the test(s).
  - fixed tests to expose an issue with Mouse classes, and documented this
    (now) known issue

0.10      2014-05-12 04:30:17Z (TRIAL RELEASE)
  - fix test diagnostics in the success case
  - fix use of a new Scalar::Util export in tests

0.09      2014-05-07 05:06:58Z (TRIAL RELEASE)
  - increased version for optional Role::Tiny prereq, to get the needed
    is_role interface
  - now ignoring 'import', 'unimport' subs; also handle users of
    Moose::Exporter without erroring
  - now ignoring overloaded methods
  - now also properly handle classes using Class::MOP directly

0.08      2014-03-09 01:08:34Z
  - fixed method identification in Moose and Mouse roles

0.07      2014-03-02 06:55:41Z
  - remove test prereqs that are meant to be optional (added in v0.06)
  - fix handling of subs composed from a role (Moose::Role, Moo::Role,
    Mouse::Role, and Role::Tiny), broken in v0.06

0.06      2014-03-01 19:14:39Z
  - lots more tests
  - in failing tests, identify the source of the uncleaned sub(s)
  - remove the dependency on Class::MOP by inspecting the package stash
    directly