@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - skip Mouse tests if some required interfaces are not available
 
 0.16      2014-08-28 23:55:47Z
   - skip Moose-related tests for normal installs, to get out of circularity
